--- a/index.html
+++ b/index.html
@@ -5,37 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstudio</title>
+
+    <!-- Fonts start -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+     <!-- Fonts end -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <!-- Header section -->
-    <header class="header"></header>
-    <a href="">Webstudio</a>
+    <header class="header">
+    <a class="logo link" href="">
+        <span>Web<span class="color2">studio</span></a>
         <nav>
-        <ul class="header-list">
+        <ul class="header-list list">
             <li class="header-item">
-                <a class="header-link" href="">Портфолио</a>
+                <a class="header-link header-link-curent link" href="">Студия</a>
             </li>
             <li class="header-item">
-                <a class="header-link" href="">Контакты</a>
+                <a class="header-link link" href="portfolio.html">Портфолио</a>
             </li>
             <li class="header-item">
-                <a class="header-link" href="">Студия</a>
+                <a class="header-link link" href="">Контакты</a>
             </li>
         </ul>
     </nav>
-    <a class="header-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a class="header-phone" href="tel:+380961111111+">+38 096 111 11 11</a>
+    <a class="header-email header-email-current link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a class="header-phone link" href="tel:+380961111111+">+38 096 111 11 11</a>
+</header>
 
     <!-- Main section -->
     <main>
         <!-- Hero Section -->
         <section class="hero">
-            <h1 class="main title">Эффективные решения для вашего бизнеса</h1>
-            <button class="order-button" type="button">Заказать услугу</button>
+            <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+            <button class="hero-btn btn" type="button">Заказать услугу</button>
         </section>
             <!-- Peculiarities Section -->
-            <section class="Peculiarities">
-            <ul>
+            <section class="peculiarities">
+            <ul class="peculiarities-items list">
                 <li>
                     <h3 class="section-subtitle">Внимание к деталям</h3>
                     <p class="section-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -57,36 +66,36 @@
 <!-- About section -->
 <section class="work-directions">
     <h2 class="section-title">Чем мы занимаемся</h2>
-    <ul>
-        <li><img class="section-item" src="./images/img-1.png" alt="программирование" width="370" height="294"></li>
-        <li><img class="section-item" src="./images/img-2.png" alt="aдаптация" width="370" height="294"></li>
-        <li><img class="section-item" src="./images/img-3.png" alt="дизайн" width="370" height="294"></li>
-    </ul>
+    <ul class="work-directions items list">
+        <li><img class="section-item" src="images/img-1.jpg" alt="программирование" width="370" height="294"></li>
+        <li><img class="section-item" src="images/img-2.jpg" alt="aдаптация" width="370" height="294"></li>
+        <li><img class="section-item" src="images/img-3.jpg" alt="дизайн" width="370" height="294"></li>
+    </ul class="work-directions items list">
         </section>
         <!-- Our team section -->
         <section class="our-team">
             <h2 class="section-title">Наша команда</h2>
         
-            <ul>
+            <ul class="team-members list">
                 <li>
-                    <img src="./images/team/img-1.jpeg" alt="член команды мужчина" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <img class="member-photo" src="images/team/img-1.jpg" alt="член команды мужчина" width="270" height="260">
+                    <h3 class=team-member-name>Игорь Демьяненко</h3>
+                    <p clss="team-member-position" lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/team/img-2.jpeg"  alt="член команды женщина" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <img class="member-photo" src="images/team/img-2.jpg"  alt="член команды женщина" width="270" height="260">
+                    <h3 class=team-member-name>Ольга Репина</h3>
+                    <p clss="team-member-position" lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/team/img-3.jpeg"  alt="член команды мужчина" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <img class="member-photo" src="images/team/img-3.jpg"  alt="член команды мужчина" width="270" height="260">
+                    <h3 class=team-member-name>Николай Тарасов</h3>
+                    <p clss="team-member-position" lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/team/img-4.jpeg"  alt="член команды мужчина" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">UI Designer</p>
+                    <img class="member-photo" src="images/team/img-4.jpg"  alt="член команды мужчина" width="270" height="260">
+                    <h3 class=team-member-name>Николай Тарасов</h3>
+                    <p clss="team-member-position" lang="en">UI Designer</p>
                 </li>
             </ul>
 
@@ -94,17 +103,18 @@
     </main>
     <!-- Footer section -->
     <footer class="footer">
-        <a href="">Webstudio</a>
+        <a class="logo link" href="">
+            <span class="color1">Web</span><span class="color2">studio</span></a>
         <address>
-            <ul>
+            <ul class="footer-items list">
                 <li>
-                    <a class="footer-address" href="https://goo.gl/maps/5DH1TTjdnPHcnVWf8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                    <a class="footer-address link" href="https://goo.gl/maps/5DH1TTjdnPHcnVWf8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
-                    <a class="footer-email" href="mailto:info@example.com">info@example.com</a>
+                    <a class="footer-email link" href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li>
-                    <a class="footer-tel" href="tel:+380991111111+">+38 099 111 11 11</a>
+                    <a class="footer-tel link" href="tel:+380991111111+">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
