--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Fonts start -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
      <!-- Fonts end -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -17,7 +17,7 @@
     <!-- Header section -->
     <header class="header">
     <a class="logo link" href="">
-        <span>Web<span class="color2">studio</span></a>
+       Web<span class="color-1">studio</span></a>
         <nav>
         <ul class="header-list list">
             <li class="header-item">
@@ -80,22 +80,22 @@
                 <li>
                     <img class="member-photo" src="images/team/img-1.jpg" alt="член команды мужчина" width="270" height="260">
                     <h3 class=team-member-name>Игорь Демьяненко</h3>
-                    <p clss="team-member-position" lang="en">Product Designer</p>
+                    <p class="team-member-position" lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img class="member-photo" src="images/team/img-2.jpg"  alt="член команды женщина" width="270" height="260">
                     <h3 class=team-member-name>Ольга Репина</h3>
-                    <p clss="team-member-position" lang="en">Frontend Developer</p>
+                    <p class="team-member-position" lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img class="member-photo" src="images/team/img-3.jpg"  alt="член команды мужчина" width="270" height="260">
                     <h3 class=team-member-name>Николай Тарасов</h3>
-                    <p clss="team-member-position" lang="en">Marketing</p>
+                    <p class="team-member-position" lang="en">Marketing</p>
                 </li>
                 <li>
                     <img class="member-photo" src="images/team/img-4.jpg"  alt="член команды мужчина" width="270" height="260">
                     <h3 class=team-member-name>Николай Тарасов</h3>
-                    <p clss="team-member-position" lang="en">UI Designer</p>
+                    <p class="team-member-position" lang="en">UI Designer</p>
                 </li>
             </ul>
 
@@ -104,7 +104,7 @@
     <!-- Footer section -->
     <footer class="footer">
         <a class="logo link" href="">
-            <span class="color1">Web</span><span class="color2">studio</span></a>
+            Web<span class="color-2">studio</span></a>
         <address>
             <ul class="footer-items list">
                 <li>
