--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- Fonts start -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+     <!-- Fonts end -->
+
      <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <!-- Header section -->
     <header class="header">
     <a class="logo link" href="index.html">
-        Web<span class="color2">studio</span></a>
+        Web<span class="color-1">studio</span></a>
         <nav>
         <ul class="header-list list">
             <li class="header-item">
@@ -31,23 +38,15 @@
 
  <!-- Main section -->
 <main>
+<section class="portfolio">   
 <ul class="portfolio-categories list">
-    <li class=portfolio-category-item>
-        <link class="portfolio-link" rel="stylesheet" href=""><button class="portfolio-btn" style="button">Все</button></link>
-    </li>
-    <li class=portfolio-category-item>
-        <link class="portfolio-link" rel="stylesheet" href=""><button class="portfolio-btn" style="button">Веб-сайты</button></link>
-    </li>
-    <li class=portfolio-category-item>
-        <link class="portfolio-link" rel="stylesheet" href=""><button class="portfolio-btn" style="button">Приложения</button></link>
-    </li>
-    <li class=portfolio-category-item>
-        <link class="portfolio-link" rel="stylesheet" href=""><button class="portfolio-btn" style="button">Дизайн</button></link>
-    </li>
-    <li class=portfolio-category-item>
-        <link class="portfolio-link" rel="stylesheet" href=""><button class="portfolio-btn" style="button">Маркетинг</button></link>
-    </li>
+    <li class=portfolio-category-item><button class="portfolio-btn" type="button">Все</button></li>
+    <li class=portfolio-category-item><button class="portfolio-btn" type="button">Веб-сайты</button></li>
+    <li class=portfolio-category-item><button class="portfolio-btn" type="button">Приложения</button></li>
+    <li class=portfolio-category-item><button class="portfolio-btn" type="button">Дизайн</button></li>
+    <li class=portfolio-category-item><button class="portfolio-btn" type="button">Маркетинг</button></li>
 </ul>
+
 
 <ul class="portfolio-list list">
     <li class="portfolio-item">
@@ -96,12 +95,13 @@
         <p class="porfolio-img-description" >Приложение</p>
     </li>
 </ul>
+</section>
 </main>
 
  <!-- Footer section -->
     <footer class="footer">
-        <a class="logo link" href="">
-            <span class="color1">Web</span><span class="color2">studio</span></a>
+         <a class="logo link" href="">
+       Web<span class="color-2">studio</span></a>
         <address>
             <ul class="footer-items list">
                 <li>
